# osmium

./: .gitignore  README.md
agent/: CMakeLists.txt  crosscompile.cmake
agent/src/: agent.cpp  agent.hpp  main.cpp  utils.cpp  utils.hpp
teamserver/: .air.toml  TODO  config.toml  go.mod  go.sum  package-lock.json  package.json  tailwind.config.css  teamserver.db  teamserver.go  webpack.config.cjs
teamserver/api/: api.go
teamserver/cmd/: main.go
teamserver/internal/config/: config.go
teamserver/internal/database/: database.go  sqlite.go
teamserver/internal/database/sqlite/: agent.go  authorization.go  events.go  sqlite.go  task_queue.go  task_results.go  tasks.go
teamserver/internal/handlers/: handlers.go
teamserver/internal/handlers/tools/: database.go  sqlite.go
teamserver/internal/http/: agent.go  api_test.go  auth.go  events.go  handlers.go  http.go  middleware.go  task_results.go  translations.go  ui.go
teamserver/internal/teamserver/: teamserver.go
teamserver/internal/templates/: agents.templ  commandline.templ  events.templ  index.templ  login.templ  task_results.templ
teamserver/internal/tools/: auth.go  encryption.go  hashing.go
teamserver/internal/ui/: ui.go
teamserver/service/: agent.go  agent_test.go  authorization.go  authorization_test.go  eventLog.go  eventLog_test.go  events.go  service.go  service_test.go  task_queue.go  task_queue_test.go  task_results.go  task_results_test.go  tasks.go  tasks_test.go
teamserver/static/css/: style.css
teamserver/static/js/: auth_refresh.js  commandline.js
(+11 files in other folders)
